--- a/Table assignment.html
+++ b/Table assignment.html
@@ -21,6 +21,7 @@
           <th>Sunday</th>
         </tr>
       </thead>
+      <tbody>
         <tr align="center">
           <td></td>
           <td>1</td>
@@ -62,6 +63,7 @@
           <td>29</td>
           <td>30</td>
         </tr>
+      </tbody>
      </table>
    
   </body>
